Added data preparation in CWL

--- a/Speaker Identification using VGGVox model.ipynb
+++ b/Speaker Identification using VGGVox model.ipynb
@@ -206,141 +206,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train si538.wav\n",
-      "Train sx268.wav\n",
-      "Train sx448.wav\n",
-      "Train sx88.wav\n",
-      "Test si1295.wav\n",
-      "Test si1798.wav\n",
-      "Test sx358.wav\n",
-      "Test sx178.wav\n",
-      "Train sx82.wav\n",
-      "Train sx262.wav\n",
-      "Train sx352.wav\n",
-      "Train sx442.wav\n",
-      "Test sx172.wav\n",
-      "Test si2242.wav\n",
-      "Test si982.wav\n",
-      "Test si1612.wav\n",
-      "Train sx414.wav\n",
-      "Train sx144.wav\n",
-      "Train sx234.wav\n",
-      "Train si2214.wav\n",
-      "Test sx324.wav\n",
-      "Test si2207.wav\n",
-      "Test si954.wav\n",
-      "Test sx54.wav\n",
-      "Train sx114.wav\n",
-      "Train sx294.wav\n",
-      "Train sx204.wav\n",
-      "Train si1194.wav\n",
-      "Test sx24.wav\n",
-      "Test si1824.wav\n",
-      "Test sx384.wav\n",
-      "Test si564.wav\n",
-      "Train sx6.wav\n",
-      "Train sx186.wav\n",
-      "Train si1086.wav\n",
-      "Train sx366.wav\n",
-      "Test sx96.wav\n",
-      "Test si658.wav\n",
-      "Test sx276.wav\n",
-      "Test si456.wav\n",
-      "Train si1063.wav\n",
-      "Train si1693.wav\n",
-      "Train sx73.wav\n",
-      "Train sx433.wav\n",
-      "Test sx343.wav\n",
-      "Test si2323.wav\n",
-      "Test sx253.wav\n",
-      "Test sx163.wav\n",
-      "Train sx425.wav\n",
-      "Train sx65.wav\n",
-      "Train si1955.wav\n",
-      "Train si1325.wav\n",
-      "Test sx245.wav\n",
-      "Test sx155.wav\n",
-      "Test sx335.wav\n",
-      "Test si695.wav\n",
-      "Train sx248.wav\n",
-      "Train si1058.wav\n",
-      "Train si1688.wav\n",
-      "Train sx68.wav\n",
-      "Test si2318.wav\n",
-      "Test sx338.wav\n",
-      "Test sx158.wav\n",
-      "Test sx428.wav\n",
-      "Train si1341.wav\n",
-      "Train si711.wav\n",
-      "Train sx351.wav\n",
-      "Train si1841.wav\n",
-      "Test sx441.wav\n",
-      "Test sx261.wav\n",
-      "Test sx171.wav\n",
-      "Test sx81.wav\n",
-      "Train sx197.wav\n",
-      "Train si1997.wav\n",
-      "Train sx107.wav\n",
-      "Train si1367.wav\n",
-      "Test sx17.wav\n",
-      "Test sx287.wav\n",
-      "Test si737.wav\n",
-      "Test sx377.wav\n",
-      "Train sx147.wav\n",
-      "Train si2217.wav\n",
-      "Train sx57.wav\n",
-      "Train sx417.wav\n",
-      "Test sx327.wav\n",
-      "Test si957.wav\n",
-      "Test sx237.wav\n",
-      "Test si486.wav\n",
-      "Train sx33.wav\n",
-      "Train si840.wav\n",
-      "Train si483.wav\n",
-      "Train sx393.wav\n",
-      "Test sx213.wav\n",
-      "Test sx123.wav\n",
-      "Test sx303.wav\n",
-      "Test si1743.wav\n",
-      "Train sx270.wav\n",
-      "Train si990.wav\n",
-      "Train sx450.wav\n",
-      "Train sx360.wav\n",
-      "Test si1411.wav\n",
-      "Test sx90.wav\n",
-      "Test sx180.wav\n",
-      "Test si2250.wav\n",
-      "Train sx42.wav\n",
-      "Train si2022.wav\n",
-      "Train sx312.wav\n",
-      "Train sx132.wav\n",
-      "Test si1392.wav\n",
-      "Test sx222.wav\n",
-      "Test si762.wav\n",
-      "Test sx402.wav\n",
-      "Train sx116.wav\n",
-      "Train si836.wav\n",
-      "Train sx26.wav\n",
-      "Train sx386.wav\n",
-      "Test sx296.wav\n",
-      "Test sx206.wav\n",
-      "Test si2096.wav\n",
-      "Test si1466.wav\n",
-      "Train sx108.wav\n",
-      "Train sx288.wav\n",
-      "Train si1818.wav\n",
-      "Train sx198.wav\n",
-      "Test sx18.wav\n",
-      "Test si1188.wav\n",
-      "Test si558.wav\n",
-      "Test sx378.wav\n"
+      "Speaker: dr7-madd0\n",
+      "    Train: si538.wav\n",
+      "    Train: sx268.wav\n",
+      "    Train: sx448.wav\n",
+      "    Train: sx88.wav\n",
+      "    Test: si1295.wav\n",
+      "    Test: si1798.wav\n",
+      "    Test: sx358.wav\n",
+      "    Test: sx178.wav\n",
+      "Speaker: dr8-fbcg1\n",
+      "    Train: sx82.wav\n",
+      "    Train: sx262.wav\n",
+      "    Train: sx352.wav\n",
+      "    Train: sx442.wav\n",
+      "    Test: sx172.wav\n",
+      "    Test: si2242.wav\n",
+      "    Test: si982.wav\n",
+      "    Test: si1612.wav\n",
+      "Speaker: dr6-mbma1\n",
+      "    Train: sx414.wav\n",
+      "    Train: sx144.wav\n",
+      "    Train: sx234.wav\n",
+      "    Train: si2214.wav\n",
+      "    Test: sx324.wav\n",
+      "    Test: si2207.wav\n",
+      "    Test: si954.wav\n",
+      "    Test: sx54.wav\n",
+      "Speaker: dr1-mcpm0\n",
+      "    Train: sx114.wav\n",
+      "    Train: sx294.wav\n",
+      "    Train: sx204.wav\n",
+      "    Train: si1194.wav\n",
+      "    Test: sx24.wav\n",
+      "    Test: si1824.wav\n",
+      "    Test: sx384.wav\n",
+      "    Test: si564.wav\n",
+      "Speaker: dr3-falk0\n",
+      "    Train: sx6.wav\n",
+      "    Train: sx186.wav\n",
+      "    Train: si1086.wav\n",
+      "    Train: sx366.wav\n",
+      "    Test: sx96.wav\n",
+      "    Test: si658.wav\n",
+      "    Test: sx276.wav\n",
+      "    Test: si456.wav\n",
+      "Speaker: dr6-fapb0\n",
+      "    Train: si1063.wav\n",
+      "    Train: si1693.wav\n",
+      "    Train: sx73.wav\n",
+      "    Train: sx433.wav\n",
+      "    Test: sx343.wav\n",
+      "    Test: si2323.wav\n",
+      "    Test: sx253.wav\n",
+      "    Test: sx163.wav\n",
+      "Speaker: dr4-falr0\n",
+      "    Train: sx425.wav\n",
+      "    Train: sx65.wav\n",
+      "    Train: si1955.wav\n",
+      "    Train: si1325.wav\n",
+      "    Test: sx245.wav\n",
+      "    Test: sx155.wav\n",
+      "    Test: sx335.wav\n",
+      "    Test: si695.wav\n",
+      "Speaker: dr7-fblv0\n",
+      "    Train: sx248.wav\n",
+      "    Train: si1058.wav\n",
+      "    Train: si1688.wav\n",
+      "    Train: sx68.wav\n",
+      "    Test: si2318.wav\n",
+      "    Test: sx338.wav\n",
+      "    Test: sx158.wav\n",
+      "    Test: sx428.wav\n",
+      "Speaker: dr5-mbgt0\n",
+      "    Train: si1341.wav\n",
+      "    Train: si711.wav\n",
+      "    Train: sx351.wav\n",
+      "    Train: si1841.wav\n",
+      "    Test: sx441.wav\n",
+      "    Test: sx261.wav\n",
+      "    Test: sx171.wav\n",
+      "    Test: sx81.wav\n",
+      "Speaker: dr3-madc0\n",
+      "    Train: sx197.wav\n",
+      "    Train: si1997.wav\n",
+      "    Train: sx107.wav\n",
+      "    Train: si1367.wav\n",
+      "    Test: sx17.wav\n",
+      "    Test: sx287.wav\n",
+      "    Test: si737.wav\n",
+      "    Test: sx377.wav\n",
+      "Speaker: dr8-mbcg0\n",
+      "    Train: sx147.wav\n",
+      "    Train: si2217.wav\n",
+      "    Train: sx57.wav\n",
+      "    Train: sx417.wav\n",
+      "    Test: sx327.wav\n",
+      "    Test: si957.wav\n",
+      "    Test: sx237.wav\n",
+      "    Test: si486.wav\n",
+      "Speaker: dr5-ftlg0\n",
+      "    Train: sx33.wav\n",
+      "    Train: si840.wav\n",
+      "    Train: si483.wav\n",
+      "    Train: sx393.wav\n",
+      "    Test: sx213.wav\n",
+      "    Test: sx123.wav\n",
+      "    Test: sx303.wav\n",
+      "    Test: si1743.wav\n",
+      "Speaker: dr4-maeb0\n",
+      "    Train: sx270.wav\n",
+      "    Train: si990.wav\n",
+      "    Train: sx450.wav\n",
+      "    Train: sx360.wav\n",
+      "    Test: si1411.wav\n",
+      "    Test: sx90.wav\n",
+      "    Test: sx180.wav\n",
+      "    Test: si2250.wav\n",
+      "Speaker: dr2-faem0\n",
+      "    Train: sx42.wav\n",
+      "    Train: si2022.wav\n",
+      "    Train: sx312.wav\n",
+      "    Train: sx132.wav\n",
+      "    Test: si1392.wav\n",
+      "    Test: sx222.wav\n",
+      "    Test: si762.wav\n",
+      "    Test: sx402.wav\n",
+      "Speaker: dr1-fvmh0\n",
+      "    Train: sx116.wav\n",
+      "    Train: si836.wav\n",
+      "    Train: sx26.wav\n",
+      "    Train: sx386.wav\n",
+      "    Test: sx296.wav\n",
+      "    Test: sx206.wav\n",
+      "    Test: si2096.wav\n",
+      "    Test: si1466.wav\n",
+      "Speaker: dr2-marc0\n",
+      "    Train: sx108.wav\n",
+      "    Train: sx288.wav\n",
+      "    Train: si1818.wav\n",
+      "    Train: sx198.wav\n",
+      "    Test: sx18.wav\n",
+      "    Test: si1188.wav\n",
+      "    Test: si558.wav\n",
+      "    Test: sx378.wav\n",
+      "Exporting enroll list to CSV: cfg/enroll_list_timit.csv\n",
+      "Exporting test list to CSV: cfg/test_list_timit.csv\n"
      ]
     }
    ],
@@ -362,6 +380,7 @@
     "\n",
     "for speakerDirectory in speakerDirectories:\n",
     "    speakerID = Path(speakerDirectory).name\n",
+    "    print(\"Speaker:\", speakerID)\n",
     "    \n",
     "    wavFiles = glob(speakerDirectory + \"/*.wav\")\n",
     "    nWavFile = len(wavFiles)\n",
@@ -375,12 +394,12 @@
     "        if fileIndex < (nWavFile-2)/2:\n",
     "            trainIDList += [speakerID]\n",
     "            trainFileList += [wavFile]\n",
-    "            print(\"Train\", Path(wavFile).name)\n",
+    "            print(\"    Train:\", Path(wavFile).name)\n",
     "            \n",
     "        if fileIndex >= (nWavFile-2)/2:\n",
     "            testIDlist += [speakerID]\n",
     "            testFileList += [wavFile]\n",
-    "            print(\"Test\", Path(wavFile).name)\n",
+    "            print(\"    Test:\", Path(wavFile).name)\n",
     "            \n",
     "        fileIndex += 1\n",
     "        \n",
@@ -393,7 +412,10 @@
     "    \"filename\": testFileList\n",
     "})\n",
     "\n",
+    "print(\"Exporting enroll list to CSV:\", \"cfg/enroll_list_timit.csv\")\n",
     "trainingSet.to_csv(\"cfg/enroll_list_timit.csv\", columns = [\"filename\", \"speaker\"], index = False)\n",
+    "\n",
+    "print(\"Exporting test list to CSV:\", \"cfg/test_list_timit.csv\")\n",
     "testingSet.to_csv(\"cfg/test_list_timit.csv\", columns = [\"filename\", \"speaker\"], index = False)\n",
     "        "
    ]
